k8s/deploy_backend_pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/joaolmonteiro/eks_hello_world_backend/hello-world_back:latest
        ports:
        - containerPort: 3000
