k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service1
spec:
  selector:
    app: backend
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: ClusterIP
