k8s/unified-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unified-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  -  http:
      paths:
      - path: /api/hello
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 3000
